// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RawHtml applies custom className to the raw html wrapper 1`] = `
<div>
  <div
    class="flex items-center [&>*]:w-full justify-center min-w-0 overflow-hidden custom-class"
    id="anexo-media-4"
  >
    <p>
      styled
    </p>
  </div>
</div>
`;

exports[`RawHtml renders HtmlPym when content contains a pym iframe 1`] = `
<div>
  <div
    class="com-embed --html"
  >
    <div
      class="contenido-externo"
    >
      <div
        class="com-anexo pym"
        id="anexo-media-1-0"
      >
        <iframe
          frameborder="0"
          marginheight="0"
          scrolling="no"
          src="https://example.com/?initialWidth=0&childId=anexo-media-1-0&parentTitle=&parentUrl=http%3A%2F%2Flocalhost%2F"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RawHtml renders raw html when content does not contain a pym iframe 1`] = `
<div>
  <div
    class="flex items-center [&>*]:w-full justify-center min-w-0 overflow-hidden"
    id="anexo-media-2"
  >
    <p>
      Hello world
    </p>
  </div>
</div>
`;
